--- a/manifests/standalone/greeting-service.yaml
+++ b/manifests/standalone/greeting-service.yaml
@@ -12,6 +12,6 @@ spec:
     targetPort: 8080
   - name: debug
     protocol: TCP
-    port: {{ .Values.service.externalDebugPort }}
-    targetPort: {{ .Values.service.internalDebugPort }}
+    port: 8080
+    targetPort: 8080
   type: LoadBalancer
